K8s/service/unused/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-config-server-deployment
  labels:
    app: task-config-server
spec:
  selector:
    matchLabels:
      app: task-config-server
  template:
    metadata:
      labels:
        app: task-config-server
    spec:
      containers:
        - name: config-server
          image: wolfram999/task-config-server:latest
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: task-config-server-svc
spec:
  selector:
    app: task-config-server
  ports:
    - protocol: TCP
      name: config-server
      port: 8888
  type: NodePort
